--- a/index.css
+++ b/index.css
@@ -101,10 +101,21 @@ form {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;  
+    align-items: left;  
 }
 
-#movie-container > div {
+/* #movie-container {
+    align-items: left;  
+} */
+.empty-watchlist, #empty-movie {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#empty-movie > div {
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
@@ -112,9 +123,12 @@ form {
 }
 
 
+
+
 .movie-cont {
     display: flex;
     align-items: center;
+
 }
 
 .movie-poster {
@@ -180,8 +194,7 @@ hr {
     background-color:#2C2C2C;
 }
 
-
-#watchlist-container > div {
+.empty-watchlist > div {
     font-weight: 700;
     font-size: 18px;
     line-height: 28px;
@@ -189,7 +202,7 @@ hr {
     color: #787878;
 }
 
-#watchlist-container > a {
+.empty-watchlist > a {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
@@ -199,7 +212,7 @@ hr {
     margin-top: 15px;
 }
 
-#watchlist-container > a > img {
+.empty-watchlist > a > img {
     max-width: 18px;
     margin-right: 8px;
 }
